filled cases file with all real cases

--- a/scripts/parser/test_html_files/file1.html
+++ b/scripts/parser/test_html_files/file1.html
@@ -50,7 +50,7 @@
       <dt>Fakultet ute:</dt><dd></dd>
       <dt>Institutt ute:</dt><dd></dd>
       <dt>Utvekslingsperiode:</dt><dd>Vår 2016</dd>
-      <dt>Studietype:</dt><dd>Fag på engelsk</dd>
+      <dt>Studietype:</dt><dd>Språk</dd>
     </dl>
   </div>
 </div>
